Update generated commit message